--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,34 @@
 
 
 
-install_requires=[
-"aiosqlite",
-"annotated-types",
-"anyio",
-"attrs",
-"Brotli",
-"certifi",
-"cffi",
-"click",
-"cryptography",
-"Cython",
-"dnspython",
-"exceptiongroup",
-"fastapi",
-"hpack",
-"hyperframe",
-"fastapi",
-"idna",
-"PyYAML",
-"Jinja2",
-"starlette",
-"mysql-connector-python",
-"trio",
-"uvicorn",
-"typing_extensions",
-"ujson",
-"gunicorn",
-"urllib3",
-"pydantic",
-"pydantic_core",
-"six"
+aiosqlite
+annotated-types
+anyio
+attrs
+Brotli
+certifi
+cffi
+click
+cryptography
+Cython
+dnspython
+exceptiongroup
+fastapi
+hpack
+hyperframe
+fastapi
+idna
+PyYAML
+Jinja2
+starlette
+mysql-connector-python
+trio
+uvicorn
+typing_extensions
+ujson
+gunicorn
+urllib3
+pydantic
+pydantic_core
+six
 
-
-
-]
